--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -16,7 +16,7 @@
 <!--2022022420:00--><!--Postponed to 22:22-->
     <!--So it BEGINS!-->
 
-<body id="home" data-spy="scroll" data-target="#main-nav">
+<body id="home" data-spy="scroll" data-target="#main-nav"> <!--Learning Git-->
     <nav class="navbar navbar-expand-md navbar-light fixed-top py-4" id="main-nav">
       <div class="container">
         <a href="#home" class="navbar-brand">
